updated crawler to update blugee urls

--- a/config.properties
+++ b/config.properties
@@ -5,6 +5,8 @@ host=localhost
 port=3306
 password=
 user=root
-db=ourtori
-baseUrl=http://localhost:8080/bluggee/
+db=bluggee
+baseUrl=http://bluggee.com/
 sourceId=1
+fbId=555586027980853
+fbSecret=cd2087204c3fe3ea5866797121e6adf5
