Added rss generator to scrapers

--- a/config.properties
+++ b/config.properties
@@ -7,6 +7,5 @@ password=
 user=root
 db=bluggee
 baseUrl=http://bluggee.com/
-sourceId=1
-fbId=555586027980853
-fbSecret=cd2087204c3fe3ea5866797121e6adf5
+#rssDirectory=/home/olufemi/rss
+rssDirectory=/home/ubuntu/rss
