--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 	    <version>1.7.3</version>
 	</dependency>
 	<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
+	<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.18</version>
