--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,18 @@
 
   <name>bluggee-scraper</name>
   <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.2.4.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+  
 
   <dependencies>
     <dependency>
@@ -34,6 +42,14 @@
 	    <version>2.4</version>
 	</dependency>
 	
+	
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-annotations</artifactId>
+	    <version>2.8.5</version>
+	</dependency>
+	
+	
 	<dependency>
 	    <groupId>org.jsoup</groupId>
 	    <artifactId>jsoup</artifactId>
@@ -49,6 +65,25 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.18</version>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+		</dependency>
+        <dependency>
+	      <groupId>org.hibernate</groupId>
+	      <artifactId>hibernate-search-orm</artifactId>
+	      <version>4.5.1.Final</version>
+	    </dependency>
+	
+	    <!-- Optional: to use JPA 2.1 -->
+	    <dependency>
+	      <groupId>org.hibernate</groupId>
+	      <artifactId>hibernate-entitymanager</artifactId>
+	    </dependency>
   </dependencies>
   
   <build>
